# Audit-

./: .gitignore  index.html
smart-audit/: Cargo.toml  README.md
smart-audit/config/: default_rules.toml
smart-audit/src/: cli.rs  lib.rs  main.rs
smart-audit/src/ai/: mod.rs
smart-audit/src/ai_analysis/: mod.rs
smart-audit/src/anomaly/: mod.rs  zscore.rs
smart-audit/src/auth/: mod.rs
smart-audit/src/data_parser/: csv_parser.rs  excel_parser.rs  mod.rs
smart-audit/src/database/: mod.rs
smart-audit/src/encryption/: mod.rs
smart-audit/src/models/: mod.rs  transaction.rs
smart-audit/src/pdf_report/: mod.rs
smart-audit/src/report_gen/: csv_export.rs  json_export.rs  mod.rs  pdf_export.rs  terminal.rs
smart-audit/src/rule_engine/: balance_check.rs  benford.rs  date_continuity.rs  duplicate.rs  mod.rs  related_party.rs  round_amount.rs  rules.rs  threshold.rs
smart-audit/src/web/: mod.rs
smart-audit/tests/: integration_tests.rs
smart-audit/tests/test_data/: sample.csv
