[package]
name = "auditlens"
version = "0.3.0"
edition = "2021"
authors = ["AuditLens Developer"]
description = "AuditLens — 会计智能查账系统 v0.3（含登录、PDF报告、AI分析）"
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
calamine = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
colored = "2"
thiserror = "1"
anyhow = "1"
rayon = "1"
toml = "0.8"

# Web 服务器
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.7"
actix-session = { version = "0.9", features = ["cookie-session"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "postgres", "chrono", "rust_decimal"] }

# 密码哈希
bcrypt = "0.15"

# PDF 生成
printpdf = "0.7"

# 数据加密
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# AI / HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
